--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
       "test:cov": "jest --coverage",
       "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
       "test:e2e": "jest --config ./test/jest-e2e.json",
-      "typeorm": "typeorm-ts-node-commonjs -d ./configORM.ts", 
+      "typeorm": "typeorm-ts-node-commonjs -d ./configORM.ts",
       "migration:generate": "npm run typeorm migration:generate",
-      "migration:run": "npm run typeorm migration:run", 
-      "migration:revert": "npm run typeorm migration:revert" 
+      "migration:run": "npm run typeorm migration:run",
+      "migration:revert": "npm run typeorm migration:revert"
    },
    "dependencies": {
       "@nestjs/common": "^9.0.0",
@@ -52,7 +52,8 @@
       "rimraf": "^3.0.2",
       "rxjs": "^7.2.0",
       "swagger-ui-express": "^4.5.0",
-      "typeorm": "0.3.10"
+      "typeorm": "0.3.10",
+      "uuid": "^9.0.0"
    },
    "devDependencies": {
       "@nestjs/cli": "^9.0.0",
@@ -60,6 +61,7 @@
       "@nestjs/testing": "^9.0.0",
       "@types/express": "^4.17.13",
       "@types/jest": "28.1.8",
+      "@types/multer": "^1.4.7",
       "@types/node": "^16.11.10",
       "@types/passport-local": "^1.0.34",
       "@types/supertest": "^2.0.11",
