--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
       "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
       "@types/joi": "^17.2.3",
       "bcrypt": "^5.0.1",
+      "cache-manager": "^4.1.0",
+      "cache-manager-redis-store": "^2.0.0",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.13.2",
       "express": "^4.18.1",
@@ -48,6 +50,7 @@
       "passport-jwt": "^4.0.0",
       "passport-local": "^1.0.0",
       "pg": "^8.4.0",
+      "redis": "^4.3.1",
       "reflect-metadata": "^0.1.13",
       "rimraf": "^3.0.2",
       "rxjs": "^7.2.0",
@@ -59,6 +62,7 @@
       "@nestjs/cli": "^9.0.0",
       "@nestjs/schematics": "^9.0.0",
       "@nestjs/testing": "^9.0.0",
+      "@types/cache-manager": "^4.0.2",
       "@types/express": "^4.17.13",
       "@types/jest": "28.1.8",
       "@types/multer": "^1.4.7",
